--- a/InvSwap/plugin.yml
+++ b/InvSwap/plugin.yml
@@ -1,6 +1,6 @@
 main: com.elan_oots.invswap.InvSwap
 name: InventorySwap
-version: 1.1
+version: ${project.version}
 
 author: elan_oots
 description: Allows you to have multiple inventories that you can swap to
